#3 BugFix: Corrected spill over of the background

--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,7 @@ header {
     align-items: center;
     color: white;
     padding: 2rem;
+    position: relative;
 }
 header::before {
     position: absolute;
